--- a/android/workshop/app/build.gradle
+++ b/android/workshop/app/build.gradle
@@ -28,6 +28,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
@@ -47,4 +48,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
+    //   implementation("com.splunk:splunk-otel-android:1.4.0")
+    implementation("com.splunk:splunk-otel-android:0.8.0")
+// this breaks the build   implementation("io.opentelemetry.android:instrumentation:0.4.0-alpha")
 }
